styles.css
.can-all {
    /* position: absolute; */
    width: 300px;
    height:300px;

}
.can-lid {
    width: 35%;
    height: 7%;
    border-radius: 70%;
    background-color: lightgray;
    border: 3px black solid;
    position: relative;
    margin: 0 auto;
    transform: translateY(20px);
    z-index: 5;

}
.can-tab {
    height: 60%;
    width: 40%;
    border-radius: 80%;
    background-color: orange;
    border: 3px black solid;
    position: relative;
    transform: translate(20px, -5px) skewY(20deg);
    z-index: 5;
}
.can-tab-inner {
    height: 55%;
    width: 45%;
    border-radius: 50%;
    background-color: lightgray;
    border: 3px orange solid;
    transform: translate(-3px, -3px);
    float: right;

}
.can-opening {
    height: 45%;
    width: 40%;
    border-radius: 0% 60% 60% 0;
    background-color: black;
    border: 1px black solid;
    position: relative;
    margin: -12% auto;
    transform: translateX(25px);

}
.can-body {
    width: 40%;
    height: 65%;
    background-color: gray;
    border-radius: 20%;
    border: 3px black solid;
    position: relative;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

.flavor-div {
    font-family: 'Exo', sans-serif;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
    font-size: 22px;
    padding: 10px;
    margin: 10px;
    color: hotpink;
}


.random-flavor-btn {
    font-family: 'Allura', cursive;
    font-size: 30px;
    color: darkslategray;
    background-image: linear-gradient(to right, red , yellow);
    padding: 12px;
    cursor: pointer;
}

